--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -5,7 +5,7 @@ body, html {
 	text-align: center;
 	padding: 0px;
 	margin: 0px;
-	height: 100%;
+	/*height: 100%;*/
 }
 
 a:link, a:visited, a:active {
@@ -21,7 +21,7 @@ a:hover {
 #wrapper {
 	margin: 0px auto;
 	width: 70%;
-	height: 100%;
+	/*height: 100%;*/
 	vertical-align: top;
 	background-color: #ffffff;
 }
